--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -31,7 +31,7 @@
 
 
       <div padding>
-        <ion-button size="large" href="/touchid" expand="block">Login</ion-button>
+        <ion-button size="large" href="/tabs" expand="block">Login</ion-button>
       </div>
     </ion-col>
   </ion-row>
