--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,17 +1,44 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>
-      Tab 3
-    </ion-title>
+    <ion-title> My Lecturers </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large"> My Lecturers</ion-title>
     </ion-toolbar>
   </ion-header>
-
-  <app-explore-container name="Tab 3 page"></app-explore-container>
+  <!-- display lecturer list as an accordian component which can show lecturer detail when clicked on and expanded -->
+  <ion-accordion-group expand="inset" *ngIf="newLecturers">
+    <ion-accordion *ngFor="let lecturer of newLecturers">
+      <ion-item slot="header" color="light">
+        <ion-label>{{lecturer.firstName}} {{lecturer.lastName}}</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-list>
+          <!-- mailto will allow students to email lecturers directly from here -->
+          <ion-item href="mailto:{{lecturer.email}}">
+            <ion-label>email: {{lecturer.email}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>moduleNo1: {{lecturer.moduleNo1}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>moduleNo2: {{lecturer.moduleNo2}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>staffNumber: {{lecturer.staffNumber}} </ion-label>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-accordion>
+  </ion-accordion-group>
 </ion-content>
