--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -12,7 +12,8 @@
   </ion-header>
 </ion-content> -->
 
-<ion-grid>
+<!-- TODO: GET RESPONSIVE STYLING -->
+<!-- <ion-grid>
   <ion-row justify-content-center>
     <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
       <div text-center>
@@ -20,19 +21,45 @@
       </div>
       <div padding>
         <ion-item>
-          <ion-input type="text" placeholder="Username"></ion-input>
+          <ion-input type="text" placeholder="Username" [(ngModel)]="username"></ion-input>
         </ion-item>
 
 
         <ion-item>
-          <ion-input type="password" placeholder="Password"></ion-input>
+          <ion-input type="password" placeholder="Password" [(ngModel)]="password"></ion-input>
         </ion-item>
       </div>
 
 
       <div padding>
-        <ion-button size="large" href="/tabs" expand="block">Login</ion-button>
+        <ion-button size="large" (click)="login()" expand="block">Login</ion-button>
       </div>
     </ion-col>
   </ion-row>
-</ion-grid>
+</ion-grid> -->
+
+<ion-content [fullscreen]="true">
+  <form  #form="ngForm" (ngSubmit)="login(form)">
+    <ion-grid>
+      <ion-row>
+        <!-- <ion-col align-self-center size-md="6" size-lg="5" size-xs="12"> -->
+        <ion-col>
+          <div>
+            <h3>Create your account!</h3>
+          </div>
+          <div>
+            <ion-item>
+              <ion-input  name="username" type="text" placeholder="Username" ngModel required></ion-input>
+            </ion-item>
+            <ion-item>
+              <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
+            </ion-item>
+          </div>
+          <div >
+            <ion-button  size="large" type="submit" [disabled]="form.invalid" expand="block">Login</ion-button>
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
+</ion-content>
