--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -49,7 +49,7 @@
           </div>
           <div>
             <ion-item>
-              <ion-input  name="username" type="text" placeholder="Username" ngModel required></ion-input>
+              <ion-input  name="name" type="text" placeholder="name" ngModel required></ion-input>
             </ion-item>
             <ion-item>
               <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
