--- a/src/app/tabs/listings/listings.page.html
+++ b/src/app/tabs/listings/listings.page.html
@@ -1,15 +1,53 @@
-<ion-header [translucent]="true">
+
+
+<ion-header [translucent]="false">
   <ion-toolbar>
-    <ion-title>
-      Listings
-    </ion-title>
+    <ion-title> Listings </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Listings</ion-title>
+      <ion-title size="large"> Listings</ion-title>
     </ion-toolbar>
   </ion-header>
+  <!-- Display loading state when newListings is not available -->
+  <!-- <ion-loading *ngIf="!newListings;" trigger="open-loading" message="Loading listings..." duration="3000"></ion-loading> -->
+
+  <!-- display listing list as an accordian component which can show listing detail when clicked on and expanded -->
+  <ion-accordion-group expand="inset" *ngIf="newListings;">
+    <ion-accordion *ngFor="let listing of newListings | async;">
+      <ion-item slot="header" color="light">
+        <ion-label>For {{listing.type | uppercase}}: {{listing.title}} for R{{listing.price}} in {{listing.location}}</ion-label>
+      </ion-item>
+      <div class="ion-padding" slot="content">
+        <ion-list>
+          <!-- mailto will allow students to email listings directly from here -->
+          <ion-item href="{{listing.url}}">
+            <!-- TODO: wtf is this for? -->
+            <ion-label>url: {{listing.url}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>{{listing.bedrooms}} <ion-icon slot="start" name="bed"></ion-icon> | {{listing.bathrooms}} <ion-icon slot="start" name="bath"></ion-icon> | <ion-icon slot="start" name="car"></ion-icon> {{listing.parking_spaces}}</ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Descrition: {{listing.description}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Amenities: {{listing.amenities}} </ion-label>
+          </ion-item>
+          <ion-item>
+            <ion-label>Images: {{listing.images}} </ion-label>
+          </ion-item>
+        </ion-list>
+      </div>
+    </ion-accordion>
+  </ion-accordion-group>
 </ion-content>
