--- a/src/app/tabs/logout/logout.page.html
+++ b/src/app/tabs/logout/logout.page.html
@@ -1,44 +1,15 @@
-<ion-header [translucent]="false">
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> My Lecturers </ion-title>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
-    </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-menu-button menu="main-menu"></ion-menu-button>
-    </ion-buttons>
+    <ion-title>
+      Logout
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large"> My Lecturers</ion-title>
+      <ion-title size="large">Logout</ion-title>
     </ion-toolbar>
   </ion-header>
-  <!-- display lecturer list as an accordian component which can show lecturer detail when clicked on and expanded -->
-  <ion-accordion-group expand="inset" *ngIf="newLecturers">
-    <ion-accordion *ngFor="let lecturer of newLecturers">
-      <ion-item slot="header" color="light">
-        <ion-label>{{lecturer.firstName}} {{lecturer.lastName}}</ion-label>
-      </ion-item>
-      <div class="ion-padding" slot="content">
-        <ion-list>
-          <!-- mailto will allow students to email lecturers directly from here -->
-          <ion-item href="mailto:{{lecturer.email}}">
-            <ion-label>email: {{lecturer.email}} </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>moduleNo1: {{lecturer.moduleNo1}} </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>moduleNo2: {{lecturer.moduleNo2}} </ion-label>
-          </ion-item>
-          <ion-item>
-            <ion-label>staffNumber: {{lecturer.staffNumber}} </ion-label>
-          </ion-item>
-        </ion-list>
-      </div>
-    </ion-accordion>
-  </ion-accordion-group>
 </ion-content>
