--- a/src/app/tabs/listings/listings.page.html
+++ b/src/app/tabs/listings/listings.page.html
@@ -35,7 +35,8 @@
             <ion-label>url: {{listing.url}} </ion-label>
           </ion-item>
           <ion-item>
-            <ion-label>{{listing.bedrooms}} <ion-icon slot="start" name="bed"></ion-icon> | {{listing.bathrooms}} <ion-icon slot="start" name="bath"></ion-icon> | <ion-icon slot="start" name="car"></ion-icon> {{listing.parking_spaces}}</ion-label>
+            <!-- <ion-label>{{listing.bedrooms}} <ion-icon slot="start" name="bed"></ion-icon> | {{listing.bathrooms}} <ion-icon slot="start" name="bath"></ion-icon> | {{listing.parking_spaces}} <ion-icon slot="start" name="car"></ion-icon></ion-label> -->
+            <ion-label>{{listing.bedrooms}} Beds | {{listing.bathrooms}} Baths | {{listing.parking_spaces}} Bays</ion-label>
           </ion-item>
           <ion-item>
             <ion-label>Descrition: {{listing.description}} </ion-label>
