--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -17,7 +17,7 @@
        <span class = "input-label">Label 1</span>
        <input type = "text" placeholder = "Placeholder 1" />
     </label>
- 
+
     <label class = "item item-input item-stacked-label">
        <span class = "input-label">Label 2</span>
        <input type = "text" placeholder = "Placeholder 2" />
@@ -35,13 +35,9 @@
     <ion-item>
       <ion-label position="floating">Sort</ion-label>
       <ion-select formControlName="sort">
-        <ion-select-option value="id">ID</ion-select-option>
-        <ion-select-option value="title">Title</ion-select-option>
-        <ion-select-option value="location">Location</ion-select-option>
-        <ion-select-option value="price">Price</ion-select-option>
-        <ion-select-option value="bedrooms">Bedrooms</ion-select-option>
-        <ion-select-option value="bathrooms">Bathrooms</ion-select-option>
-        <ion-select-option value="parking_spaces">Parking Spaces</ion-select-option>
+        <ion-select-option *ngFor="let sortField of getFields()" [value]="sortField">
+          {{ sortField | uppercase }}
+        </ion-select-option>
       </ion-select>
     </ion-item>
 
@@ -74,10 +70,12 @@
     <ion-item>
       <ion-label position="floating">Return Fields</ion-label>
       <ion-select multiple formControlName="return">
-        <ion-select-option value="id">ID</ion-select-option>
-        <ion-select-option value="price">Price</ion-select-option>
-        <ion-select-option value="location">Location</ion-select-option>
-        <ion-select-option value="images">Images</ion-select-option>
+        <ion-select-option [value]="getFields()">
+          *
+        </ion-select-option>
+        <ion-select-option *ngFor="let returnField of getFields()" [value]="returnField">
+          {{ returnField }}
+        </ion-select-option>
       </ion-select>
     </ion-item>
     <ion-button (click)="onSubmit()">Search</ion-button>
