--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -70,7 +70,7 @@
     <ion-item>
       <ion-label position="floating">Return Fields</ion-label>
       <ion-select multiple formControlName="return">
-        <ion-select-option [value]="getFields()">
+        <ion-select-option>
           *
         </ion-select-option>
         <ion-select-option *ngFor="let returnField of getFields()" [value]="returnField">
