--- a/src/app/tabs/search/search.page.html
+++ b/src/app/tabs/search/search.page.html
@@ -6,25 +6,6 @@
   </ion-toolbar>
 </ion-header>
 
-<!-- <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Search</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <div class = "list">
-    <label class = "item item-input item-stacked-label">
-       <span class = "input-label">Label 1</span>
-       <input type = "text" placeholder = "Placeholder 1" />
-    </label>
-
-    <label class = "item item-input item-stacked-label">
-       <span class = "input-label">Label 2</span>
-       <input type = "text" placeholder = "Placeholder 2" />
-    </label>
- </div>
-</ion-content> -->
-
 <ion-content>
   <ion-list [formGroup]="searchForm">
     <ion-item>
@@ -65,6 +46,38 @@
       <ion-item>
         <ion-label position="floating">Search Location</ion-label>
         <ion-input type="text" formControlName="location"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">ID</ion-label>
+        <ion-input type="number" formControlName="id"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Title</ion-label>
+        <ion-input type="text" formControlName="title"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Price Min</ion-label>
+        <ion-input type="number" formControlName="price_min"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Price Max</ion-label>
+        <ion-input type="number" formControlName="price_max"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Bedrooms</ion-label>
+        <ion-input type="number" formControlName="bedrooms"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Bathrooms</ion-label>
+        <ion-input type="number" formControlName="bathrooms"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Parking Spaces</ion-label>
+        <ion-input type="number" formControlName="parking_spaces"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-label position="floating">Amenities</ion-label>
+        <ion-input type="text" formControlName="amenities"></ion-input>
       </ion-item>
   </div>
     <ion-item>
